# chessgame

./: CMakeLists.txt  README.md
src/: ChessBoardWidget.cpp  ChessBoardWidget.h  ChessGame.cpp  ChessGame.h  ChessLogic.cpp  ChessLogic.h  ChessPiece.h  main.cpp
